test/files/neg/varargs.check
varargs.scala:16: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[java.lang.String])Int as an existing method.
    @varargs def v1(a: Int, b: String*) = a + b.length
                 ^
varargs.scala:19: error: A method without repeated parameters cannot be annotated with the `varargs` annotation.
  @varargs def nov(a: Int) = 0
               ^
varargs.scala:21: error: A method with a varargs annotation produces a forwarder method with the same signature (a: Int, b: Array[java.lang.String])Int as an existing method.
  @varargs def v2(a: Int, b: String*) = 0
               ^
three errors found
